--- a/css/base/utility-classes.scss
+++ b/css/base/utility-classes.scss
@@ -27,9 +27,11 @@
 .p-top-small {
   padding-top: 1rem;
 }
+
 .p-top-large {
   padding-top: 1.6rem;
 }
+
 .p-bottom-large {
   padding-bottom: 1.6rem;
 }
@@ -38,6 +40,7 @@
   .p-top-large {
     padding-top: 3.5rem;
   }
+
   .p-bottom-large {
     padding-bottom: 3.5rem;
   }
@@ -46,9 +49,11 @@
 .no-margin {
   margin: 0;
 }
+
 .nu {
   text-decoration: none;
 }
+
 .nu:hover {
   text-decoration: underline;
 }
@@ -56,9 +61,17 @@
 .t-left {
   text-align: left;
 }
+
 .t-right {
   text-align: right;
 }
+
+@include atTiny {
+  .t-center {
+    text-wrap: wrap;
+  }
+}
+
 .t-center {
   text-align: center;
 }
@@ -70,9 +83,11 @@
 .float-left {
   float: left;
 }
+
 .float-right {
   float: right;
 }
+
 .push-right {
   margin-right: 20px;
 }
